Pagination fix. ResponceDto update